[gd_scene load_steps=8 format=3 uid="uid://b5qq212iv7ss0"]

[ext_resource type="Texture2D" uid="uid://be8g4bt5xf6pv" path="res://Art/Rocks/Rock1/Rock0.png" id="1_pmlje"]
[ext_resource type="Script" path="res://Scripts/Rocks/Rock.gd" id="2_7fy8d"]
[ext_resource type="Resource" uid="uid://d0eev7fauvuru" path="res://Data/RockDropChances/BasicStoneDropChance.tres" id="3_ct2s4"]

[sub_resource type="Animation" id="Animation_abxp5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_i62tp"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.570723, 0.0]
}

[sub_resource type="Animation" id="Animation_tntn2"]
resource_name = "hit2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y5vh1"]
_data = {
"RESET": SubResource("Animation_abxp5"),
"hit": SubResource("Animation_i62tp"),
"hit2": SubResource("Animation_tntn2")
}

[node name="Rock" type="Sprite2D" groups=["Rock"]]
texture = ExtResource("1_pmlje")
script = ExtResource("2_7fy8d")
DropChances = ExtResource("3_ct2s4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y5vh1")
}
speed_scale = 10.0

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -143.0
offset_right = 11.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
